# OpenKeyFlow

./: .gitignore  OpenKeyFlow.pyw  OpenKeyFlow.spec  README.md  bootstrap.py  openkeyflow.py  openkeyflow.toml  pyproject.toml  requirements-linux.txt  requirements-windows.txt  requirements.txt
.github/workflows/: generate-checksums.yml
app/: __init__.py  embedded_assets.py  main.py  main_window.py  resources.py
backend/: autostart.py  hooks.py  logging_utils.py  storage.py  trigger_engine.py
openkeyflow/: __init__.py  __main__.py  launcher.py  metadata.py
requirements/: base.in  base.txt  linux.in  linux.txt  macos.txt  windows.in  windows.txt
tools/: build_appimage.sh  checksums-latest.txt  generate_checksums.sh  openkeyflow-v0.0.1-checksums.txt  openkeyflow-v1.0.0-checksums.txt  stress_test.py
