[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openkeyflow"
dynamic = ["version", "description", "authors", "keywords", "classifiers", "urls"]
readme = "README.md"
requires-python = ">=3.12"

license = { text = "GPL-3.0-or-later" }

dependencies = [
  # leave empty if you use requirements.txt
]

# --- Tooling configuration (non-invasive) ---

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = { attr = "openkeyflow.metadata.PROJECT_VERSION" }
description = { attr = "openkeyflow.metadata.PROJECT_DESCRIPTION" }
authors = { attr = "openkeyflow.metadata.PROJECT_AUTHORS" }
keywords = { attr = "openkeyflow.metadata.PROJECT_KEYWORDS" }
classifiers = { attr = "openkeyflow.metadata.PROJECT_CLASSIFIERS" }
urls = { attr = "openkeyflow.metadata.PROJECT_URLS" }